eliminate a nested div

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="dropdown">
-              <div id="drop"><div id="drop"><span >Video & Audio Solutions </span><i class="fa fa-caret-down"></i></div></div>
+              <div id="drop"><span >Video & Audio Solutions </span><i class="fa fa-caret-down"></i></div>
               <div class="dropdown-content">
                 <a href="best_practices.html">Best Practices</a>
                 <a href="audios.html">Audios</a>
